# keras2cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CmakeLists.txt  LICENSE  Makefile  README.md  cpp_model.cc  create_unit_tests.py  keras2cpp.py  keras_model.cc  keras_model.h  keras_model_test.cc  python_model.py
src/: baseLayer.cc  baseLayer.h  model.cc  model.h  reader.cc  reader.h  tensor.cc  tensor.h  utils.cc  utils.h
src/layers/: activation.cc  activation.h  batchNormalization.cc  batchNormalization.h  conv2d.cc  conv2d.h  dense.cc  dense.h  elu.cc  elu.h  embedding.cc  embedding.h  flatten.cc  flatten.h  latm.h  lstm.cc  maxPooling2d.cc  maxPooling2d.h
